--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: gremerritt@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Greg Merritt. Computer Engineer.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://gremerritt.herokuapp.com" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 github_username:  gremerritt
 
