--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ markdown: kramdown
 theme: minima
 sass:
   sass_dir: _sass
-include: ['_pages', '_images']
+include: ['_pages', '_images', '_posts']
 kramdown:
   input: GFM
 gems: ['kramdown']
